--- a/keycloackadapter/src/main/resources/application.yml
+++ b/keycloackadapter/src/main/resources/application.yml
@@ -45,10 +45,12 @@ keycloak:
   token-uri: ${keycloak.base-uri}${keycloak.realm}/protocol/openid-connect/token
   logout: ${keycloak.base-uri}${keycloak.realm}/protocol/openid-connect/logout
   jwk-set-uri: ${keycloak.base-uri}${keycloak.realm}/protocol/openid-connect/certs
-  certs-id: ${KEYCLOACK_REAL_ID:T8XN4l6IGHW5Yd_VD9WdV7JW_F5UVVGiZ1csJewsyLs}
- 
+  certs-id: ${KEYCLOACK_REAL_ID:lV9ujzwh3tvdNT8btLep9Ha1WHfQGlrnMXWlSVUh2Jc}
+  user-uri: http://localhost:8088/admin/realms/${keycloak.realm}/users
+  admin-token-uri: ${keycloak.base-uri}master/protocol/openid-connect/token
+  
   client-id: ${KEYCLOACK_CLIENT:bff-service}
-  client-secret: ${KEYCLOACK_SECRET:UoowXrW5KgpRlPbOJuL5n8ZaLcjOo2nT}
+  client-secret: ${KEYCLOACK_SECRET:02mMgDkbK2YdMBlNIG7GyDp8bmc8tHYb}
   scope: profile #openid
   authorization-grant-type: password
   authorization-grant-type-refresh: refresh_token
